[gd_scene load_steps=6 format=3 uid="uid://k1m2i41784ta"]

[ext_resource type="Script" path="res://Scripts/sequencer_ui.gd" id="1_hlk0o"]
[ext_resource type="PackedScene" uid="uid://dp25wrqakcp8d" path="res://Scenes/circle_blue.tscn" id="2_2xpm8"]
[ext_resource type="PackedScene" uid="uid://da6fm1ly0j1ch" path="res://Scenes/circle_red.tscn" id="3_aidud"]
[ext_resource type="PackedScene" uid="uid://ceye1utpvcinx" path="res://Scenes/circle_purple.tscn" id="4_u6rr3"]
[ext_resource type="PackedScene" uid="uid://b58ipdnlmtk7o" path="res://Scenes/circle_yellow.tscn" id="5_xxdlk"]

[node name="SequencerUi" type="Control"]
layout_mode = 3
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 1.0
offset_top = -0.200012
offset_right = -0.200012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hlk0o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SEQUENCER"
language = "english"

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -1.00003
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="PatchBlue" parent="GridContainer" instance=ExtResource("2_2xpm8")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PatchRed" parent="GridContainer" instance=ExtResource("3_aidud")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PatchPurple" parent="GridContainer" instance=ExtResource("4_u6rr3")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PatchYellow" parent="GridContainer" instance=ExtResource("5_xxdlk")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
